--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "license": "MIT",
     "require" : {
-        "ext-sockets": "*"
+        "ext-sockets": "*",
+        "kael-shipman/php-std-traits": "v5.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.0"
