--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require" : {
         "ext-sockets": "*",
-        "kael-shipman/php-std-traits": "^6.0.0"
+        "kael-shipman/php-std-traits": "^6.0.0 || ^7.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.0"
